Jobbet med forsiden

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,15 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <h4>oh my</h4>
+    <div class="container">
+      <div class="center line"></div>
+      <div class="center">
+        <div class="announcement circle">
+          <h1>Save the date</h1>
+          <p class="date">27.06.15 - 29.06.15</p>
+          <p>Kine &amp; Iver</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
