--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,48 @@ body {
 a {
   color: #00B7FF;
 }
+
+.container {
+  /*position: relative;*/
+}
+
+.announcement {
+  padding: 25px;
+  text-align: center;
+  background-color: #93C4B1;
+  color: white;
+}
+
+.announcement p.date {
+  font-size: 45px;
+}
+
+.announcement p {
+  font-size: 25px;
+}
+
+.announcement h1 {
+  font-size: 35px;
+}
+
+.circle {
+	border-radius: 50%;
+	width: 300px;
+	height: 300px;
+}
+
+.center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.line {
+  display: inline-block;
+  width: 100%;
+  height: 20px;
+  background-color: #93C4B1;
+}
