Endringer på font

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
       <div class="center line"></div>
       <div class="center">
         <div class="announcement circle">
-          <h1>Save the date</h1>
-          <p class="date">27.06.15 - 29.06.15</p>
-          <p>Kine &amp; Iver</p>
+          <p class="top">Kine &amp; Iver</p>
+          <p class="date center">26.06.15 - 28.06.15</p>
+          <p class="bottom">Save the date</p>
         </div>
       </div>
     </div>
