--- a/public/stylesheets/background.css
+++ b/public/stylesheets/background.css
@@ -1,7 +1,7 @@
 body {
     padding: 50px;
     font-family: 'Open Sans Condensed', sans-serif;
-    background: url('../images/background.jpg') no-repeat center center fixed;
+    background: url('../images/background.JPG') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
