Jobbet med forsiden

--- a/views/background.ejs
+++ b/views/background.ejs
@@ -5,9 +5,23 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/background.css' />
+    <script src='javascripts/jquery.min.js' type='text/javascript'></script>
+    <script src='javascripts/scroll.js' type='text/javascript'></script>
   </head>
   <body>
-    <div class="container">
+    <div class="wrapper">
+    <!-- <div class="scrollUp">
+
+    </div>
+    <div class="scrollDown">
+      <span class="arrow-down"> </span>
+    </div> -->
+
+
+
+
+
+    <article class="container hytta">
       <div class="center">
         <div class="announcement circle">
           <p class="top">Kine &amp; Iver</p>
@@ -15,6 +29,23 @@
           <p class="bottom">Save the date</p>
         </div>
       </div>
-    </div>
+      <footer>
+        <div class="rotated-background"></div>
+        <p class="next-text">Fredag - Skogstad Gård</p>
+      </footer>
+    </article>
+    <article class="container helgaker">
+      <div class="center">
+        <div class="announcement circle">
+          <p class="top">Fredag 26.06.15</p>
+          <p class="date center">Skogstad</p>
+          <p class="bottom">Her blir det pølse og pils</p>
+        </div>
+      </div>
+      <footer>
+        <p></p>
+      </footer>
+    </article>
+  </div>
   </body>
 </html>
