--- a/public/stylesheets/background.css
+++ b/public/stylesheets/background.css
@@ -1,9 +1,93 @@
-body {
-    padding: 50px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    background: url('../images/background.JPG') no-repeat center center fixed;
+.hytta {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: -1;
+
+    display: block;
+    background: url('/images/background.JPG') no-repeat center center fixed;
+    width: 100%;
+    height: 100%;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+.helgaker {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    top: 100%;
+    display: block;
+    background: url('/images/cinque.JPG') no-repeat center center fixed;
+    width: 100%;
+    height: 100%;
+
+    /*-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;*/
+}
+
+.wrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.scrollUp {
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  opacity: 0.5;
+  position: fixed;
+  bottom: 110px;
+  right: 50px;
+  cursor: pointer;
+}
+
+.scrollDown {
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  opacity: 0.5;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  cursor: pointer;
+}
+
+.arrow-down {
+	width: 0;
+	height: 0;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+
+	border-top: 20px solid white;
+}
+
+.rotated-background {
+  width: 110%;
+  position: absolute;
+  background-color: #93C4B1;
+  height: 200px;
+  bottom: -100px;
+  text-align: center;
+  color: white;
+  margin-left: -5%;
+  -webkit-transform: rotate(-5deg);
+}
+
+.next-text {
+  font-size: 50px;
+  float: right;
+  right: 25px;
+  bottom: 25px;
+  position: absolute;
+  display: block;
+  color: white;
+  cursor: pointer;
 }
