--- a/views/background.ejs
+++ b/views/background.ejs
@@ -22,16 +22,11 @@
       <div class="menu-circle menu-sunday"data-menu-button="sunday"><p class="relative-center">Søndag</p></div>
     </div>
 
-
-
     <article class="slide main active" data-slide="main">
       <div class="center">
       </div>
-      <footer>
-        <div class="rotated-background"></div>
-        <p class="next-text">Vi gifter oss!</p>
-      </footer>
     </article>
+    <div class="slicer slicer1"></div>
     <article class="slide friday" data-slide="friday">
       <div class="center">
         <div class="announcement circle">
@@ -40,11 +35,8 @@
           <p class="bottom">Her blir det pølse og pils</p>
         </div>
       </div>
-      <footer>
-        <div class="rotated-background"></div>
-        <p class="next-text">Vi gifter oss!</p>
-      </footer>
     </article>
+    <div class="slicer slicer2"></div>
     <article class="slide saturday" data-slide="saturday">
       <div class="center">
         <div class="announcement circle">
@@ -53,11 +45,8 @@
           <p class="bottom">Her blir det fest!</p>
         </div>
       </div>
-      <footer>
-        <div class="rotated-background"></div>
-        <p class="next-text">Vi gifter oss!</p>
-      </footer>
     </article>
+    <div class="slicer slicer3"></div>
     <article class="slide sunday" data-slide="sunday">
       <div class="center">
         <div class="announcement circle">
@@ -66,10 +55,6 @@
           <p class="bottom">Frokost</p>
         </div>
       </div>
-      <footer>
-        <div class="rotated-background"></div>
-        <p class="next-text">Vi gifter oss!</p>
-      </footer>
     </article>
   </div>
   </body>
