--- a/public/stylesheets/less/background.less
+++ b/public/stylesheets/less/background.less
@@ -23,7 +23,7 @@
     left: 0;
     right: 0;
     z-index: -1;
-    top: 100%;
+    top: 102%;
     display: block;
     background: url('/images/cinque.JPG') no-repeat center center fixed;
     width: 100%;
@@ -40,7 +40,7 @@
     left: 0;
     right: 0;
     z-index: -1;
-    top: 200%;
+    top: 204%;
     display: block;
     background: url('/images/cinque.JPG') no-repeat center center fixed;
     width: 100%;
@@ -58,7 +58,7 @@
     left: 0;
     right: 0;
     z-index: -1;
-    top: 300%;
+    top: 306%;
     display: block;
     background: url('/images/cinque.JPG') no-repeat center center fixed;
     width: 100%;
@@ -68,6 +68,27 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;*/
+}
+
+.slicer {
+  width: 100%;
+  position: absolute;
+  background-color: @banner;
+  height: 2%;
+  bottom: -20px;
+  text-align: center;
+  color: white;
+}
+.slicer1 {
+  bottom: -2%;
+}
+
+.slicer2 {
+  bottom: -104%;
+}
+
+.slicer3 {
+  bottom: -206%;
 }
 
 
@@ -109,17 +130,8 @@
 	border-top: 20px solid white;
 }
 
-.rotated-background {
-  width: 110%;
-  position: absolute;
-  background-color: @banner;
-  height: 200px;
-  bottom: -100px;
-  text-align: center;
-  color: white;
-  margin-left: -5%;
-  -webkit-transform: rotate(-5deg);
-}
+
+
 
 .next-text {
   font-size: 50px;
