--- a/public/stylesheets/less/background.less
+++ b/public/stylesheets/less/background.less
@@ -1,4 +1,18 @@
 
+.slide {
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  /*-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
+}
+
 .main {
     position: absolute;
     left: 0;
@@ -6,7 +20,6 @@
     z-index: -1;
 
     display: block;
-    /*background: url('/images/background.JPG') no-repeat center center fixed;*/
     width: 100%;
     height: 100%;
 
@@ -19,55 +32,18 @@
 }
 
 .friday {
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: -1;
     top: 102%;
-    display: block;
-    background: url('/images/cinque.JPG') no-repeat center center fixed;
-    width: 100%;
-    height: 100%;
-
-    /*-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
+    background: url('/images/skogstad-blur.JPG') no-repeat center center fixed;
 }
 
 .saturday {
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: -1;
     top: 204%;
-    display: block;
-    background: url('/images/cinque.JPG') no-repeat center center fixed;
-    width: 100%;
-    height: 100%;
-
-    /*-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
+    background: url('/images/hytta-blur.JPG') no-repeat center center fixed;
 }
 
-
 .sunday {
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: -1;
     top: 306%;
-    display: block;
     background: url('/images/cinque.JPG') no-repeat center center fixed;
-    width: 100%;
-    height: 100%;
-
-    /*-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;*/
 }
 
 .slicer {
