--- a/public/stylesheets/less/general.less
+++ b/public/stylesheets/less/general.less
@@ -41,8 +41,8 @@ a {
 
 .menu-circle {
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+  width: 150px;
+  height: 150px;
   text-align: center;
   background-color: #93C4B1;
   color: white;
@@ -54,6 +54,7 @@ a {
   background-size: cover;
   opacity: 0.5;
   z-index: 2;
+  float: left;
 }
 .menu-friday {
   background: url('/images/skogstad.JPG') no-repeat center center;
@@ -71,10 +72,15 @@ a {
   font-size: 40px;
 }
 
-.somebackground {
+.menu-wrapper {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%
+}
+.menu {
+  margin: 0 auto;
+  width: 510px;
 }
 
 .center {
