--- a/views/background.ejs
+++ b/views/background.ejs
@@ -16,10 +16,12 @@
       <span class="arrow-down"> </span>
     </div> -->
 
-    <div class="somebackground">
-      <div class="menu-circle menu-friday" data-menu-button="friday"><p class="relative-center">Fredag</p></div>
-      <div class="menu-circle menu-saturday" data-menu-button="saturday"><p class="relative-center">Lørdag</p></div>
-      <div class="menu-circle menu-sunday"data-menu-button="sunday"><p class="relative-center">Søndag</p></div>
+    <div class="menu-wrapper">
+      <div class="menu">
+        <div class="menu-circle menu-friday" data-menu-button="friday"><p class="relative-center">Fredag</p></div>
+        <div class="menu-circle menu-saturday" data-menu-button="saturday"><p class="relative-center">Lørdag</p></div>
+        <div class="menu-circle menu-sunday"data-menu-button="sunday"><p class="relative-center">Søndag</p></div>
+      </div>
     </div>
 
     <article class="slide main active" data-slide="main">
