--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,40 +4,66 @@
     <title><%= title %></title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='/stylesheets/css/style.css' />
-    <style>
-      .container:before {
-        content: "";
-        position: fixed;
-        left: 0;
-        right: 0;
-        z-index: -1;
-
-        display: block;
-        background: url('/images/background-blur-web.jpg') no-repeat center center fixed;
-        width: 100%;
-        height: 100%;
-
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        /*-webkit-filter: blur(5px);
-        -moz-filter: blur(5px);
-        -o-filter: blur(5px);
-        -ms-filter: blur(5px);
-        filter: blur(5px);*/
-      }
-    </style>
+    <script src='javascripts/jquery.min.js' type='text/javascript'></script>
+    <script src='javascripts/scroll.js' type='text/javascript'></script>
   </head>
   <body>
-    <div class="container">
+    <div class="wrapper">
+    <!-- <div class="scrollUp">
+
+    </div>
+    <div class="scrollDown">
+      <span class="arrow-down"> </span>
+    </div> -->
+
+    <div class="menu-wrapper">
+      <div class="menu">
+        <div class="menu-circle menu-friday" data-menu-button="friday"><p class="relative-center">Fredag</p></div>
+        <div class="menu-circle menu-saturday" data-menu-button="saturday"><p class="relative-center">Lørdag</p></div>
+        <div class="menu-circle menu-sunday"data-menu-button="sunday"><p class="relative-center">Søndag</p></div>
+      </div>
+
+    </div>
+
+    <article class="slide main active" data-slide="main">
       <div class="center">
         <div class="announcement circle">
-          <p class="top">Kine &amp; Iver</p>
+          <p class="top">Vi gifter oss</p>
           <p class="date center">26.06.15 - 28.06.15</p>
-          <p class="bottom">Save the date</p>
+          <p class="bottom">K & I</p>
         </div>
       </div>
-    </div>
+    </article>
+    <div class="slicer slicer1"></div>
+    <article class="slide friday" data-slide="friday">
+      <div class="center">
+        <div class="announcement circle">
+          <p class="top">Fredag 26.06.15</p>
+          <p class="date center">Skogstad</p>
+          <p class="bottom">Her blir det pølse og pils</p>
+        </div>
+      </div>
+    </article>
+    <div class="slicer slicer2"></div>
+    <article class="slide saturday" data-slide="saturday">
+      <div class="center">
+        <div class="announcement circle">
+          <p class="top">Lørdag 27.06.15</p>
+          <p class="date center">Bryllup</p>
+          <p class="bottom">Her blir det fest!</p>
+        </div>
+      </div>
+    </article>
+    <div class="slicer slicer3"></div>
+    <article class="slide sunday" data-slide="sunday">
+      <div class="center">
+        <div class="announcement circle">
+          <p class="top">Søndag 26.06.15</p>
+          <p class="date center">Helgaker</p>
+          <p class="bottom">Frokost</p>
+        </div>
+      </div>
+    </article>
+  </div>
   </body>
 </html>
