--- a/public/stylesheets/less/background.less
+++ b/public/stylesheets/less/background.less
@@ -43,7 +43,7 @@
 
 .sunday {
     top: 306%;
-    background: url('/images/cinque.JPG') no-repeat center center fixed;
+    background: url('/images/helgaker-blur.JPG') no-repeat center center fixed;
 }
 
 .slicer {
