--- a/public/stylesheets/less/general.less
+++ b/public/stylesheets/less/general.less
@@ -57,15 +57,15 @@ a {
   float: left;
 }
 .menu-friday {
-  background: url('/images/skogstad.JPG') no-repeat center center;
+  background: url('/images/skogstad-sml.JPG') no-repeat center center;
 }
 
 .menu-saturday {
-  background: url('/images/background.JPG') no-repeat center center;
+  background: url('/images/hytta-sml.JPG') no-repeat center center;
 }
 
 .menu-sunday {
-  background: url('/images/cinque.JPG') no-repeat center center;
+  background: url('/images/helgaker-sml.JPG') no-repeat center center;
 }
 
 .menu-circle p {
