--- a/public/stylesheets/less/general.less
+++ b/public/stylesheets/less/general.less
@@ -13,24 +13,28 @@ a {
   color: white;
 }
 
-.announcement p {
+.announcement div {
   width: 100%;
 }
 
-.announcement p.date {
+.announcement .date {
   font-size: 54px;
 }
 
-.announcement p.top {
+.announcement .top {
   margin-top: 35px;
   font-size: 43px;
 }
-.announcement p.bottom {
+.announcement .bottom {
   margin-bottom: 70px;
   font-size: 30px;
   position: absolute;
   left: 0;
   bottom: 0;
+}
+.announcement .text {
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 .circle {
@@ -74,7 +78,7 @@ a {
 
 .menu-wrapper {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%
 }
