--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,9 +28,9 @@
     <article class="slide main active" data-slide="main">
       <div class="center">
         <div class="announcement circle">
-          <p class="top">Vi gifter oss</p>
-          <p class="date center">26.06.15 - 28.06.15</p>
-          <p class="bottom">K & I</p>
+          <div class="top">Vi gifter oss</div>
+          <div class="date center">26.06.15 - 28.06.15</div>
+          <div class="bottom"><p class="text">K & I</p></div>
         </div>
       </div>
     </article>
@@ -38,9 +38,9 @@
     <article class="slide friday" data-slide="friday">
       <div class="center">
         <div class="announcement circle">
-          <p class="top">Fredag 26.06.15</p>
-          <p class="date center">Skogstad</p>
-          <p class="bottom">Her blir det pølse og pils</p>
+          <div class="top">Fredag 26.06.15</div>
+          <div class="date center">Skogstad</div>
+          <div class="bottom"><p class="text">Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p></div>
         </div>
       </div>
     </article>
@@ -48,9 +48,9 @@
     <article class="slide saturday" data-slide="saturday">
       <div class="center">
         <div class="announcement circle">
-          <p class="top">Lørdag 27.06.15</p>
-          <p class="date center">Bryllup</p>
-          <p class="bottom">Her blir det fest!</p>
+          <div class="top">Lørdag 27.06.15</div>
+          <div class="date center">Bryllup</div>
+          <div class="bottom"><p class="text">Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p></div>
         </div>
       </div>
     </article>
@@ -58,9 +58,9 @@
     <article class="slide sunday" data-slide="sunday">
       <div class="center">
         <div class="announcement circle">
-          <p class="top">Søndag 26.06.15</p>
-          <p class="date center">Helgaker</p>
-          <p class="bottom">Frokost</p>
+          <div class="top">Søndag 26.06.15</div>
+          <div class="date center">Helgaker</div>
+          <div class="bottom"><p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p></div>
         </div>
       </div>
     </article>
