--- a/public/stylesheets/less/background.less
+++ b/public/stylesheets/less/background.less
@@ -14,21 +14,12 @@
 }
 
 .main {
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: -1;
-
-    display: block;
-    width: 100%;
-    height: 100%;
-
-
-    background-color: @background;
+    /*background-color: @background;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover;*/
+    background: url('/images/forside.JPG') no-repeat top left fixed;
 }
 
 .friday {
