--- a/public/stylesheets/less/background.less
+++ b/public/stylesheets/less/background.less
@@ -19,22 +19,22 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;*/
-    background: url('/images/forside.JPG') no-repeat top left fixed;
+    background: url('/images/forside.jpg') no-repeat top left fixed;
 }
 
 .friday {
     top: 102%;
-    background: url('/images/skogstad-blur.JPG') no-repeat center center fixed;
+    background: url('/images/skogstad-blur.jpg') no-repeat center center fixed;
 }
 
 .saturday {
     top: 204%;
-    background: url('/images/hytta-blur.JPG') no-repeat center center fixed;
+    background: url('/images/hytta-blur.jpg') no-repeat center center fixed;
 }
 
 .sunday {
     top: 306%;
-    background: url('/images/helgaker-blur.JPG') no-repeat center center fixed;
+    background: url('/images/helgaker-blur.jpg') no-repeat center center fixed;
 }
 
 .slicer {
