--- a/public/stylesheets/less/general.less
+++ b/public/stylesheets/less/general.less
@@ -61,15 +61,15 @@ a {
   float: left;
 }
 .menu-friday {
-  background: url('/images/skogstad-sml.JPG') no-repeat center center;
+  background: url('/images/skogstad-sml.jpg') no-repeat center center;
 }
 
 .menu-saturday {
-  background: url('/images/hytta-sml.JPG') no-repeat center center;
+  background: url('/images/hytta-sml.jpg') no-repeat center center;
 }
 
 .menu-sunday {
-  background: url('/images/helgaker-sml.JPG') no-repeat center center;
+  background: url('/images/helgaker-sml.jpg') no-repeat center center;
 }
 
 .menu-circle p {
