--- a/public/stylesheets/less/general.less
+++ b/public/stylesheets/less/general.less
@@ -1,90 +1,71 @@
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+  html {
+    font-size: 40%;
+  }
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+  html {
+    font-size: 40%;
+  }
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+  html {
+    font-size: 40%;
+  }
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width : 1224px) {
+  html {
+    font-size: 62.5%;
+  }
+}
+
 body {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
 a {
   color: #00B7FF;
-}
-
-.announcement {
-  padding: 25px;
-  text-align: center;
-  background-color: @main;
-  color: white;
-}
-
-.announcement div {
-  width: 100%;
-}
-
-.announcement .date {
-  font-size: 54px;
-}
-
-.announcement .top {
-  margin-top: 35px;
-  font-size: 43px;
-}
-.announcement .bottom {
-  margin-bottom: 70px;
-  font-size: 30px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-.announcement .text {
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.circle {
-  border-radius: 50%;
-  width: 400px;
-  height: 400px;
-}
-
-.menu-circle {
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  text-align: center;
-  background-color: #93C4B1;
-  color: white;
-  margin: 10px;
-  cursor: pointer;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  opacity: 0.5;
-  z-index: 2;
-  float: left;
-}
-.menu-friday {
-  background: url('/images/skogstad-sml.jpg') no-repeat center center;
-}
-
-.menu-saturday {
-  background: url('/images/hytta-sml.jpg') no-repeat center center;
-}
-
-.menu-sunday {
-  background: url('/images/helgaker-sml.jpg') no-repeat center center;
-}
-
-.menu-circle p {
-  font-size: 40px;
-}
-
-.menu-wrapper {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%
-}
-.menu {
-  margin: 0 auto;
-  width: 510px;
 }
 
 .center {
