Ferdig scroll-versjon

--- a/public/stylesheets/less/slide.less
+++ b/public/stylesheets/less/slide.less
@@ -23,26 +23,26 @@
 }
 
 .main {
-    background: url('/images/forside7.jpg') no-repeat top left fixed;
-    .b-cover;
+    background: url('/images/forside8.jpg') no-repeat top left fixed;
+    //.b-cover;
 }
 
 .friday {
     top: 102%;
-    background: url('/images/skogstad-blur.jpg') no-repeat top left fixed;
-    .b-cover;
+    background: url('/images/skogstad-blur.jpg') no-repeat center center fixed;
+    //.b-cover;
 }
 
 .saturday {
     top: 204%;
-    background: url('/images/hytta-blur.jpg') no-repeat top left fixed;
-    .b-cover;
+    background: url('/images/hytta-blur.jpg') no-repeat center center fixed;
+    //.b-cover;
 }
 
 .sunday {
     top: 306%;
-    background: url('/images/helgaker-blur.jpg') no-repeat top left fixed;
-    .b-cover;
+    background: url('/images/helgaker-blur.jpg') no-repeat center center fixed;
+    //.b-cover;
 }
 
 .slicer {
