--- a/views/background.ejs
+++ b/views/background.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/css/style.css' />
     <script src='javascripts/jquery.min.js' type='text/javascript'></script>
     <script src='javascripts/scroll.js' type='text/javascript'></script>
@@ -22,39 +23,45 @@
         <div class="menu-circle menu-saturday" data-menu-button="saturday"><p class="relative-center">Lørdag</p></div>
         <div class="menu-circle menu-sunday"data-menu-button="sunday"><p class="relative-center">Søndag</p></div>
       </div>
+
     </div>
 
     <article class="slide main active" data-slide="main">
-      <div class="center">
+      <div class="announcement-wrapper">
+        <div class="announcement announcement-circle">
+          <div class="top">Vi gifter oss</div>
+          <div class="date center">26.06.15 - 28.06.15</div>
+          <div class="bottom"><p class="text">K & I</p></div>
+        </div>
       </div>
     </article>
     <div class="slicer slicer1"></div>
     <article class="slide friday" data-slide="friday">
-      <div class="center">
-        <div class="announcement circle">
-          <p class="top">Fredag 26.06.15</p>
-          <p class="date center">Skogstad</p>
-          <p class="bottom">Her blir det pølse og pils</p>
+      <div class="announcement-wrapper">
+        <div class="announcement announcement-circle">
+          <div class="top">Fredag 26.06.15</div>
+          <div class="date center">Skogstad Gård</div>
+          <div class="bottom"><p class="text">Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p></div>
         </div>
       </div>
     </article>
     <div class="slicer slicer2"></div>
     <article class="slide saturday" data-slide="saturday">
-      <div class="center">
-        <div class="announcement circle">
-          <p class="top">Lørdag 27.06.15</p>
-          <p class="date center">Bryllup</p>
-          <p class="bottom">Her blir det fest!</p>
+      <div class="announcement-wrapper">
+        <div class="announcement announcement-circle">
+          <div class="top">Lørdag 27.06.15</div>
+          <div class="date center">Kimbu & Helgaker Gård</div>
+          <div class="bottom"><p class="text">Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p></div>
         </div>
       </div>
     </article>
     <div class="slicer slicer3"></div>
     <article class="slide sunday" data-slide="sunday">
-      <div class="center">
-        <div class="announcement circle">
-          <p class="top">Søndag 26.06.15</p>
-          <p class="date center">Helgaker</p>
-          <p class="bottom">Frokost</p>
+      <div class="announcement-wrapper">
+        <div class="announcement announcement-circle">
+          <div class="top">Søndag 28.06.15</div>
+          <div class="date center">Helgaker Gård</div>
+          <div class="bottom"><p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p></div>
         </div>
       </div>
     </article>
