--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,27 +4,23 @@
     <title><%= title %></title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/css/style.css' />
+    <link rel='stylesheet' href='/stylesheets/css/v2/style.css' />
     <script src='javascripts/jquery.min.js' type='text/javascript'></script>
-    <script src='javascripts/scroll.js' type='text/javascript'></script>
+    <script src='javascripts/v2/scroll.js' type='text/javascript'></script>
   </head>
   <body>
-    <div class="wrapper">
-    <!-- <div class="scrollUp">
-
-    </div>
-    <div class="scrollDown">
-      <span class="arrow-down"> </span>
-    </div> -->
-
-    <div class="menu-wrapper">
-      <div class="menu">
-        <div class="menu-circle menu-friday" data-menu-button="friday"><p class="relative-center">Fredag</p></div>
-        <div class="menu-circle menu-saturday" data-menu-button="saturday"><p class="relative-center">Lørdag</p></div>
-        <div class="menu-circle menu-sunday"data-menu-button="sunday"><p class="relative-center">Søndag</p></div>
+    <nav class="menu-wrapper">
+      <div class="container">
+        <div class="menu">
+          <div><a class="menu-link menu-friday" href"#" data-menu-button="friday">Fredag</a></div>
+          <div><a class="menu-link menu-saturday" href"#" data-menu-button="saturday">Lørdag</a></div>
+          <div><a class="menu-link menu-sunday" href"#" data-menu-button="sunday">Søndag</a></div>
+        </ul>
       </div>
+    </nav>
 
-    </div>
+
+    <div class="wrapper">
 
     <article class="slide main active" data-slide="main">
       <div class="announcement-wrapper">
@@ -35,7 +31,7 @@
         </div>
       </div>
     </article>
-    <div class="slicer slicer1"></div>
+    <div class="slicer"></div>
     <article class="slide friday" data-slide="friday">
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
@@ -45,7 +41,19 @@
         </div>
       </div>
     </article>
-    <div class="slicer slicer2"></div>
+    <div class="slicer"></div>
+    <div class="info-area">
+      <div class="container">
+        <div class="info-img">
+          <div class="info-circle info-friday"></div>
+        </div>
+        <div class="info-text"></div>
+          <h1>Skogstad</h1>
+          <p>Peder og Marte Dihle tok over gården i 1960(?) osv.</p>
+        </div>
+
+    </div>
+    <div class="slicer"></div>
     <article class="slide saturday" data-slide="saturday">
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
@@ -55,7 +63,7 @@
         </div>
       </div>
     </article>
-    <div class="slicer slicer3"></div>
+    <div class="slicer"></div>
     <article class="slide sunday" data-slide="sunday">
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
