--- a/public/stylesheets/less/v2/slide.less
+++ b/public/stylesheets/less/v2/slide.less
@@ -19,7 +19,14 @@
   z-index: -1;
   display: block;
   width: 100%;
-  height: 80%;
+  /* Firefox */
+  height: -moz-calc(~"100% - 60px");
+  /* WebKit */
+  height: -webkit-calc(~"100% - 60px");
+  /* Opera */
+  height: -o-calc(~"100% - 60px");
+  /* Standard */
+  height: calc(~"100% - 60px");
 }
 
 .info-area {
