--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,6 @@
         <div class="announcement announcement-circle">
           <div class="top">Fredag 26.06.15</div>
           <div class="date center">Skogstad Gård</div>
-          <div class="bottom"><p class="text">Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p></div>
         </div>
       </div>
     </article>
@@ -49,9 +48,8 @@
         </div>
         <div class="info-text"></div>
           <h1>Skogstad</h1>
-          <p>Peder og Marte Dihle tok over gården i 1960(?) osv.</p>
+          <p>Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p>
         </div>
-
     </div>
     <div class="slicer"></div>
     <article class="slide saturday" data-slide="saturday">
@@ -59,20 +57,42 @@
         <div class="announcement announcement-circle">
           <div class="top">Lørdag 27.06.15</div>
           <div class="date center">Kimbu & Helgaker Gård</div>
-          <div class="bottom"><p class="text">Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p></div>
         </div>
       </div>
     </article>
+    <div class="slicer"></div>
+    <div class="info-area">
+      <div class="container">
+        <div class="info-img">
+          <div class="info-circle info-saturday"></div>
+        </div>
+        <div class="info-text"></div>
+          <h1>Kimbu & Helgaker Gård</h1>
+          <p>Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p>
+        </div>
+    </div>
     <div class="slicer"></div>
     <article class="slide sunday" data-slide="sunday">
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
           <div class="top">Søndag 28.06.15</div>
           <div class="date center">Helgaker Gård</div>
-          <div class="bottom"><p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p></div>
+          <div class="bottom"><p class="text"></p></div>
         </div>
       </div>
     </article>
+    <div class="slicer"></div>
+    <div class="info-area">
+      <div class="container">
+        <div class="info-img">
+          <div class="info-circle info-sunday"></div>
+        </div>
+        <div class="info-text"></div>
+          <h1>Helgaker Gård</h1>
+          <p>Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
+        </div>
+    </div>
+    <div class="slicer"></div>
   </div>
   </body>
 </html>
