--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,8 +25,8 @@
     <article class="slide main active" data-slide="main">
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
-          <div class="top">Vi gifter oss</div>
-          <div class="date center">26.06.15 - 28.06.15</div>
+          <div class="top">26.06.15 - 28.06.15</div>
+          <div class="middle center">Vi gifter oss!</div>
           <div class="bottom"><p class="text">K & I</p></div>
         </div>
       </div>
@@ -36,7 +36,7 @@
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
           <div class="top">Fredag 26.06.15</div>
-          <div class="date center">Skogstad Gård</div>
+          <div class="middle center">Skogstad Gård</div>
         </div>
       </div>
     </article>
@@ -48,7 +48,7 @@
         </div>
         <div class="info-text"></div>
           <h1>Skogstad</h1>
-          <p>Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p>
+          <p class="text">Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -56,7 +56,7 @@
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
           <div class="top">Lørdag 27.06.15</div>
-          <div class="date center">Kimbu & Helgaker Gård</div>
+          <div class="middle center">Kimbu<br> &<br> Helgaker Gård</div>
         </div>
       </div>
     </article>
@@ -68,7 +68,7 @@
         </div>
         <div class="info-text"></div>
           <h1>Kimbu & Helgaker Gård</h1>
-          <p>Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p>
+          <p class="text">Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -76,8 +76,7 @@
       <div class="announcement-wrapper">
         <div class="announcement announcement-circle">
           <div class="top">Søndag 28.06.15</div>
-          <div class="date center">Helgaker Gård</div>
-          <div class="bottom"><p class="text"></p></div>
+          <div class="middle center">Helgaker Gård</div>
         </div>
       </div>
     </article>
@@ -89,7 +88,7 @@
         </div>
         <div class="info-text"></div>
           <h1>Helgaker Gård</h1>
-          <p>Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
+          <p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
         </div>
     </div>
     <div class="slicer"></div>
