--- a/public/stylesheets/less/v2/menu.less
+++ b/public/stylesheets/less/v2/menu.less
@@ -2,17 +2,14 @@
   font-size: 40px;
 }
 
-body {
-  margin-top: 60px;
-}
-
 .menu-wrapper {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 60px;
-  background-color: #5E8461;
+  background-color: rgba(94,132,97,0.5);
+  //opacity: 0.5;
 
 }
 .menu {
@@ -26,4 +23,8 @@ body {
     float: left;
     padding-top: 10px;
   }
+}
+
+.menu-link {
+  opacity: 0.5;
 }
