--- a/public/stylesheets/less/v2/slide.less
+++ b/public/stylesheets/less/v2/slide.less
@@ -19,14 +19,11 @@
   z-index: -1;
   display: block;
   width: 100%;
-  /* Firefox */
-  height: -moz-calc(~"100% - 60px");
-  /* WebKit */
+  height: 100%;
+  /*height: -moz-calc(~"100% - 60px");
   height: -webkit-calc(~"100% - 60px");
-  /* Opera */
   height: -o-calc(~"100% - 60px");
-  /* Standard */
-  height: calc(~"100% - 60px");
+  height: calc(~"100% - 60px");*/
 }
 
 .info-area {
