--- a/public/stylesheets/css/v2/menu.css
+++ b/public/stylesheets/css/v2/menu.css
@@ -1,1 +1,1 @@
-.menu-circle p{font-size:40px}body{margin-top:60px}.menu-wrapper{position:fixed;top:0;left:0;width:100%;height:60px;background-color:#5e8461}.menu{margin:0 auto;color:#fff;font-size:40px;text-align:center}.menu div{width:33%;float:left;padding-top:10px}
+.menu-circle p{font-size:40px}.menu-wrapper{position:fixed;top:0;left:0;width:100%;height:60px;background-color:rgba(94,132,97,0.5)}.menu{margin:0 auto;color:#fff;font-size:40px;text-align:center}.menu div{width:33%;float:left;padding-top:10px}.menu-link{opacity:.5}
