--- a/public/stylesheets/less/announcement.less
+++ b/public/stylesheets/less/announcement.less
@@ -112,7 +112,7 @@ and (min-width : 1224px) {
   }
   .bottom {
     margin-bottom: 70px;
-    font-size: 3.0rem;
+    font-size: 30px;
     position: absolute;
     left: 0;
     bottom: 0;
