--- a/public/stylesheets/less/v2/slide.less
+++ b/public/stylesheets/less/v2/slide.less
@@ -67,6 +67,11 @@
   }
 }
 
+.info-main {
+  background: url('/images/kiver-sml.jpg') no-repeat center center;
+  .b-cover;
+}
+
 .info-friday {
   background: url('/images/skogstad-sml.jpg') no-repeat center center;
 }
