--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,10 +27,21 @@
         <div class="announcement announcement-circle">
           <div class="top">26.06.15 - 28.06.15</div>
           <div class="middle center">Vi gifter oss!</div>
-          <div class="bottom"><p class="text">K & I</p></div>
+          <div class="bottom"><p>K & I</p></div>
         </div>
       </div>
     </article>
+    <div class="slicer"></div>
+    <div class="info-area">
+      <div class="container">
+        <div class="info-img">
+          <div class="info-circle info-main"></div>
+        </div>
+        <div class="info-text"></div>
+          <h1>Vi gifter oss!</h1>
+          <p class="text">Helgen 26.-28. juni 2015 gifter vi oss, etter 10 år som kjærester. Vi håper at du har lyst til å være med å feire sammen med oss. Vi lover en litt mer formell invitasjon etterhvert, inntil da håper vi at du/dere vil holde av helgen i kalenderen. Inntil da vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!</p>
+        </div>
+    </div>
     <div class="slicer"></div>
     <article class="slide friday" data-slide="friday">
       <div class="announcement-wrapper">
@@ -89,6 +100,8 @@
         <div class="info-text"></div>
           <h1>Helgaker Gård</h1>
           <p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
+          <br>
+          <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for helgen. Mer informasjon kommer :)</p>
         </div>
     </div>
     <div class="slicer"></div>
