--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
         </div>
         <div class="info-text"></div>
           <h1>Vi gifter oss!</h1>
-          <p class="text">Helgen 26.-28. juni 2015 gifter vi oss, etter 10 år som kjærester. Vi håper at du har lyst til å være med å feire sammen med oss. Vi lover en litt mer formell invitasjon etterhvert, inntil da håper vi at du/dere vil holde av helgen i kalenderen. Inntil da vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!</p>
+          <p class="text">Helgen 26.-28. juni 2015 gifter vi oss, etter 10 år som kjærester og vi håper at du har lyst til å være med å feire. Vi lover en litt mer formell invitasjon etterhvert, inntil da håper vi at du/dere vil holde av helgen i kalenderen. I tiden fremover vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!</p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -79,7 +79,7 @@
         </div>
         <div class="info-text"></div>
           <h1>Kimbu & Helgaker Gård</h1>
-          <p class="text">Den store dagen starter med vielse på familiehytta til Kine. Deretter blir det bryllupsfest på Helgaker Gård.</p>
+          <p class="text">Den store dagen starter med vielse på familiehytta til Kine, også kjent som Kimbu. Deretter blir det mottakelse, middag og bryllupsfest på Helgaker Gård.</p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -101,7 +101,7 @@
           <h1>Helgaker Gård</h1>
           <p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
           <br>
-          <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for helgen. Mer informasjon kommer :)</p>
+          <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for hele helgen. Mer informasjon kommer.</p>
         </div>
     </div>
     <div class="slicer"></div>
