--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,13 @@
         </div>
         <div class="info-text"></div>
           <h1>Vi gifter oss!</h1>
-          <p class="text">Helgen 26.-28. juni 2015 gifter vi oss, etter 10 år som kjærester og vi håper at du har lyst til å være med å feire. Vi lover en litt mer formell invitasjon etterhvert, inntil da håper vi at du/dere vil holde av helgen i kalenderen. I tiden fremover vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!</p>
+          <p class="text">
+            Helgen 26.-28. juni 2015 gifter vi oss, etter 10 år som kjærester og vi håper at du har lyst til å være med å feire.
+            Hold av datoene for en helg på Hadeland.
+            I tiden fremover vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!
+            </p>
+            <br>
+            <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for hele helgen. Mer informasjon kommer.</p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -59,7 +65,10 @@
         </div>
         <div class="info-text"></div>
           <h1>Skogstad</h1>
-          <p class="text">Vi starter bryllupshelgen med en uformell samling på familiegården til Iver, for å bli litt bedre kjent.</p>
+          <p class="text">
+            Helgen starter med en uformell samling på familiegården til Iver for å bli litt bedre kjent.
+            Bryggingen av bryllupsølet er allerede i gang, og fint være er besilt.
+          </p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -79,7 +88,11 @@
         </div>
         <div class="info-text"></div>
           <h1>Kimbu & Helgaker Gård</h1>
-          <p class="text">Den store dagen starter med vielse på familiehytta til Kine, også kjent som Kimbu. Deretter blir det mottakelse, middag og bryllupsfest på Helgaker Gård.</p>
+          <p class="text">
+            Den store dagen starter med vielse på familiehytta til Kine, også kjent som Kimbu.
+            Deretter blir det mottakelse, middag og bryllupsfest på Helgaker Gård.
+            Vi sørger for transporten, dere sørger for gode dansesko til de sene nattetimer.
+          </p>
         </div>
     </div>
     <div class="slicer"></div>
@@ -100,8 +113,6 @@
         <div class="info-text"></div>
           <h1>Helgaker Gård</h1>
           <p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
-          <br>
-          <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for hele helgen. Mer informasjon kommer.</p>
         </div>
     </div>
     <div class="slicer"></div>
