--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
           <h1>Skogstad</h1>
           <p class="text">
             Helgen starter med en uformell samling på familiegården til Iver for å bli litt bedre kjent.
-            Bryggingen av bryllupsølet er allerede i gang, og fint være er besilt.
+            Bryggingen av bryllupsølet er allerede i gang, og fint vær er besilt.
           </p>
         </div>
     </div>
