--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,12 +40,12 @@
         <div class="info-text"></div>
           <h1>Vi gifter oss!</h1>
           <p class="text">
-            Helgen 26.-28. juni 2015 gifter vi oss, etter 10 år som kjærester og vi håper at du har lyst til å være med å feire.
-            Hold av datoene for en helg på Hadeland.
+            Helgen 26.-28. juni 2015 gifter vi oss etter 10 år som kjærester, og vi håper at du har lyst til å være med å feire kjærligheten.
+            Vi håper derfor du/dere vil holde av datoene for en helg på Hadeland.
             I tiden fremover vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!
             </p>
             <br>
-            <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for hele helgen. Mer informasjon kommer.</p>
+            <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for hele helgen. Mer informasjon om dette kommer.</p>
         </div>
     </div>
     <div class="slicer"></div>
