Favicon og tekst

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/css/v2/style.css' />
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <script src='javascripts/jquery.min.js' type='text/javascript'></script>
     <script src='javascripts/v2/scroll.js' type='text/javascript'></script>
   </head>
@@ -67,7 +68,7 @@
           <h1>Skogstad</h1>
           <p class="text">
             Helgen starter med en uformell samling på familiegården til Iver for å bli litt bedre kjent.
-            Bryggingen av bryllupsølet er allerede i gang, og fint vær er besilt.
+            Bryggingen av bryllupsølet er allerede i gang, og fint vær er bestilt.
           </p>
         </div>
     </div>
@@ -90,8 +91,7 @@
           <h1>Kimbu & Helgaker Gård</h1>
           <p class="text">
             Den store dagen starter med vielse på familiehytta til Kine, også kjent som Kimbu.
-            Deretter blir det mottakelse, middag og bryllupsfest på Helgaker Gård.
-            Vi sørger for transporten, dere sørger for gode dansesko til de sene nattetimer.
+            Deretter blir det mottakelse, middag og bryllupsfest og dans til de sene nattetimer på Helgaker Gård.
           </p>
         </div>
     </div>
@@ -112,7 +112,9 @@
         </div>
         <div class="info-text"></div>
           <h1>Helgaker Gård</h1>
-          <p class="text">Det vil bli lunsj og mimring på Helgaker Gård, før vi takker for en fin helg.</p>
+          <p class="text">
+            Vi håper dere vil avslutte helga med oss med en sen frokost (lunsj?) med oss på Helgaker Gård.
+            </p>
         </div>
     </div>
     <div class="slicer"></div>
