--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,8 @@
         <div class="info-text"></div>
           <h1>Vi gifter oss!</h1>
           <p class="text">
-            Helgen 26.-28. juni 2015 gifter vi oss etter 10 år som kjærester, og vi håper at du har lyst til å være med å feire kjærligheten.
-            Vi håper derfor du/dere vil holde av datoene for en helg på Hadeland.
+            Helgen 26.-28. juni 2015 gifter vi oss etter 10 år som kjærester.
+            Vi håper derfor du/dere vil holde av datoene for en helg på Hadeland for å feire kjærligheten med oss.
             I tiden fremover vil du kunne finne informasjon om bryllupshelgen her. Vi gleder oss!
             </p>
         </div>
@@ -89,7 +89,7 @@
           <h1>Kimbu & Helgaker Gård</h1>
           <p class="text">
             Den store dagen starter med vielse på familiehytta til Kine, også kjent som Kimbu.
-            Deretter blir det mottakelse, middag og bryllupsfest og dans til de sene nattetimer på Helgaker Gård.
+            Deretter blir det mottakelse, middag, bryllupsfest og dans til de sene nattetimer på Helgaker Gård.
           </p>
         </div>
     </div>
@@ -111,10 +111,10 @@
         <div class="info-text"></div>
           <h1>Helgaker Gård</h1>
           <p class="text">
-            Vi håper dere vil avslutte helga med oss med en sen frokost (lunsj?) med oss på Helgaker Gård.
+            Vi håper dere vil avslutte helga med oss med en sen frokost (lunsj?) på Helgaker Gård.
             </p>
             <br>
-            <p class="text">PS: Det vil bli muligheter for å booke overnatting på Helgaker Gård for hele helgen. Mer informasjon om dette kommer.</p>
+            <p class="text">PS: Det vil bli muligheter for å booke overnatting på gården for hele helgen. Mer informasjon om dette kommer.</p>
         </div>
     </div>
     <div class="slicer"></div>
