--- a/public/css/app.css
+++ b/public/css/app.css
@@ -240,7 +240,7 @@ h1 {
   background: url('/images/helgaker-sml.jpg') no-repeat center center;
 }
 .main {
-  background: url('/images/forside8.jpg') no-repeat top left fixed;
+  background: url('/images/forside.jpg') no-repeat top left fixed;
 }
 .friday {
   background: url('/images/skogstad-blur.jpg') no-repeat center center fixed;
