--- a/public/stylesheets/less/slide.less
+++ b/public/stylesheets/less/slide.less
@@ -85,7 +85,7 @@
 }
 
 .main {
-    background: url('/images/forside8.jpg') no-repeat top left fixed;
+    background: url('/images/forside.jpg') no-repeat top left fixed;
     //.b-cover;
 }
 
